--- a/traitement_image/rqt_ft_gui/src/rqt_ft_gui/ft_gui.ui
+++ b/traitement_image/rqt_ft_gui/src/rqt_ft_gui/ft_gui.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1222</width>
+    <width>1433</width>
     <height>895</height>
    </rect>
   </property>
@@ -117,8 +117,6 @@
          <property name="lineWidth">
           <number>1</number>
          </property>
-         <zorder>horizontalSpacer_3</zorder>
-         <zorder></zorder>
         </widget>
        </item>
        <item>
@@ -253,7 +251,6 @@
          <property name="lineWidth">
           <number>1</number>
          </property>
-         <zorder></zorder>
         </widget>
        </item>
        <item>
@@ -295,7 +292,7 @@
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_droit">
      <item>
-      <widget class="QGroupBox" name="groupBox">
+      <widget class="QGroupBox" name="groupBox_opening">
        <property name="title">
         <string>MorphOps : Ouverture</string>
        </property>
@@ -305,7 +302,7 @@
        <property name="checkable">
         <bool>true</bool>
        </property>
-       <widget class="QSpinBox" name="spinBox_2">
+       <widget class="QSpinBox" name="spinBox_opening_iterations">
         <property name="geometry">
          <rect>
           <x>110</x>
@@ -315,7 +312,7 @@
          </rect>
         </property>
        </widget>
-       <widget class="QSpinBox" name="spinBox">
+       <widget class="QSpinBox" name="spinBox_opening_size">
         <property name="geometry">
          <rect>
           <x>110</x>
@@ -357,7 +354,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QGroupBox" name="groupBox_2">
+      <widget class="QGroupBox" name="groupBox_closing">
        <property name="title">
         <string>MorphOps : Fermeture</string>
        </property>
@@ -367,7 +364,7 @@
        <property name="checkable">
         <bool>true</bool>
        </property>
-       <widget class="QSpinBox" name="spinBox_3">
+       <widget class="QSpinBox" name="spinBox_closing_iterations">
         <property name="geometry">
          <rect>
           <x>110</x>
@@ -377,7 +374,7 @@
          </rect>
         </property>
        </widget>
-       <widget class="QSpinBox" name="spinBox_4">
+       <widget class="QSpinBox" name="spinBox_closing_size">
         <property name="geometry">
          <rect>
           <x>110</x>
@@ -419,7 +416,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QGroupBox" name="groupBox_3">
+      <widget class="QGroupBox" name="groupBox_HSV_value">
        <property name="title">
         <string>Filtrage : Luminance</string>
        </property>
@@ -519,12 +516,12 @@
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>1082</x>
-     <y>662</y>
+     <x>1402</x>
+     <y>531</y>
     </hint>
     <hint type="destinationlabel">
-     <x>1106</x>
-     <y>630</y>
+     <x>1371</x>
+     <y>497</y>
     </hint>
    </hints>
   </connection>
@@ -535,12 +532,12 @@
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>1106</x>
-     <y>630</y>
+     <x>1371</x>
+     <y>497</y>
     </hint>
     <hint type="destinationlabel">
-     <x>1082</x>
-     <y>662</y>
+     <x>1402</x>
+     <y>531</y>
     </hint>
    </hints>
   </connection>
